mutants.out/log/src__graph__wfg.rs_line_112_col_9.log

*** src/graph/wfg.rs:112:9: replace WaitForGraph::node_weight -> &NodeWeight with Box::leak(Box::new(Default::default()))

*** mutation diff:
--- src/graph/wfg.rs
+++ replace WaitForGraph::node_weight -> &NodeWeight with Box::leak(Box::new(Default::default()))
@@ -104,17 +104,17 @@
 
     /// Get mutable edge weight by index.
     pub fn edge_weight_mut(&mut self, idx: EdgeIndex) -> &mut EdgeWeight {
         &mut self.graph[idx]
     }
 
     /// Get node weight by index.
     pub fn node_weight(&self, idx: NodeIndex) -> &NodeWeight {
-        &self.graph[idx]
+        Box::leak(Box::new(Default::default())) /* ~ changed by cargo-mutants ~ */
     }
 
     /// All node indices, sorted by ThreadId for determinism.
     pub fn node_indices(&self) -> Vec<NodeIndex> {
         self.node_map.values().copied().collect()
     }
 
     /// Clone the graph structure with the same topology but reset


*** /home/maverick/.rustup/toolchains/1.94-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=wperf@0.1.0
       Fresh cfg-if v1.0.4
       Fresh unicode-ident v1.0.24
       Fresh autocfg v1.5.0
       Fresh linux-raw-sys v0.12.1
       Fresh bitflags v2.11.0
       Fresh equivalent v1.0.2
       Fresh foldhash v0.1.5
       Fresh hashbrown v0.16.1
       Fresh itoa v1.0.18
       Fresh fixedbitset v0.5.7
       Fresh once_cell v1.21.4
       Fresh memchr v2.8.0
       Fresh fastrand v2.3.0
       Fresh fnv v1.0.7
       Fresh quick-error v1.2.3
       Fresh libc v0.2.183
       Fresh hashbrown v0.15.5
       Fresh indexmap v2.13.0
       Fresh bit-vec v0.8.0
       Fresh unarray v0.1.4
       Fresh regex-syntax v0.8.10
       Fresh proc-macro2 v1.0.106
       Fresh getrandom v0.3.4
       Fresh serde_core v1.0.228
       Fresh zerocopy v0.8.47
       Fresh getrandom v0.4.2
       Fresh zmij v1.0.21
       Fresh rustix v1.1.4
       Fresh wait-timeout v0.2.1
       Fresh petgraph v0.8.3
       Fresh bit-set v0.8.0
       Fresh quote v1.0.45
       Fresh rand_core v0.9.5
       Fresh serde_json v1.0.149
       Fresh tempfile v3.27.0
       Fresh ppv-lite86 v0.2.21
       Fresh num-traits v0.2.19
       Fresh syn v2.0.117
       Fresh rand_chacha v0.9.0
       Fresh rand_xorshift v0.4.0
       Fresh rusty-fork v0.3.1
       Fresh rand v0.9.2
       Fresh serde_derive v1.0.228
       Fresh proptest v1.11.0
       Fresh serde v1.0.228
       Dirty wperf v0.1.0 (/tmp/cargo-mutants-phase0-jC2iYg.tmp): the file `src/graph/wfg.rs` has changed (1774690367.759523801s, 371226366ns after last build at 1774690367.388297435s)
   Compiling wperf v0.1.0 (/tmp/cargo-mutants-phase0-jC2iYg.tmp)
     Running `/home/maverick/.rustup/toolchains/1.94-x86_64-unknown-linux-gnu/bin/rustc --crate-name wperf --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=b336c738ac6331ae -C extra-filename=-3eb8c1cfaa96dc7b --out-dir /tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps -C linker=clang -C incremental=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps --extern petgraph=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps/libpetgraph-4acf2b925821119a.rlib --extern proptest=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps/libproptest-cf23810614906ad5.rlib --extern serde=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps/libserde-3a4ab966af36b62f.rlib --extern serde_json=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps/libserde_json-b75ff9ddc7ba4b13.rlib -C link-arg=-fuse-ld=/usr/bin/mold`
     Running `/home/maverick/.rustup/toolchains/1.94-x86_64-unknown-linux-gnu/bin/rustc --crate-name wperf --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=63bedfa4aa42468d -C extra-filename=-9b008d9ff48e6c45 --out-dir /tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps -C linker=clang -C incremental=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps --extern petgraph=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps/libpetgraph-4acf2b925821119a.rmeta --extern serde=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps/libserde-3a4ab966af36b62f.rmeta --extern serde_json=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps/libserde_json-b75ff9ddc7ba4b13.rmeta -C link-arg=-fuse-ld=/usr/bin/mold`
error[E0277]: the trait bound `types::NodeWeight: Default` is not satisfied
   --> src/graph/wfg.rs:112:28
    |
112 |         Box::leak(Box::new(Default::default())) /* ~ changed by cargo-mutants ~ */
    |                            ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `types::NodeWeight`
   --> src/graph/types.rs:82:1
    |
 82 | pub struct NodeWeight {
    | ^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `wperf` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/maverick/.rustup/toolchains/1.94-x86_64-unknown-linux-gnu/bin/rustc --crate-name wperf --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=63bedfa4aa42468d -C extra-filename=-9b008d9ff48e6c45 --out-dir /tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps -C linker=clang -C incremental=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps --extern petgraph=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps/libpetgraph-4acf2b925821119a.rmeta --extern serde=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps/libserde-3a4ab966af36b62f.rmeta --extern serde_json=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps/libserde_json-b75ff9ddc7ba4b13.rmeta -C link-arg=-fuse-ld=/usr/bin/mold` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `wperf` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/maverick/.rustup/toolchains/1.94-x86_64-unknown-linux-gnu/bin/rustc --crate-name wperf --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=b336c738ac6331ae -C extra-filename=-3eb8c1cfaa96dc7b --out-dir /tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps -C linker=clang -C incremental=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps --extern petgraph=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps/libpetgraph-4acf2b925821119a.rlib --extern proptest=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps/libproptest-cf23810614906ad5.rlib --extern serde=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps/libserde-3a4ab966af36b62f.rlib --extern serde_json=/tmp/cargo-mutants-phase0-jC2iYg.tmp/target/debug/deps/libserde_json-b75ff9ddc7ba4b13.rlib -C link-arg=-fuse-ld=/usr/bin/mold` (exit status: 1)

*** result: Failure(101)
